# codegard

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/django_app/apps/contests/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  test_contest_personal.py  test_contests_api.py  test_rating.py  test_scoring.py  test_tasks.py  urls.py  views.py
backend/django_app/apps/contests/migrations/: 0001_initial.py  0002_contestscore.py  0003_contest_subtitle_contestscore_rating_after_and_more.py  0004_contest_rating_applied.py
backend/django_app/apps/problems/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  test_daily.py  test_daily_task.py  test_problem_content.py  test_problems_api.py  test_recommended.py  test_tags_acceptance.py  urls.py  views.py
backend/django_app/apps/problems/management/commands/: seed_problems.py
backend/django_app/apps/problems/migrations/: 0001_initial.py  0002_tag_problem_tags.py  0003_dailyproblem.py  0004_problem_constraints_problem_input_format_and_more.py
backend/django_app/apps/realtime/: apps.py  routing.py  test_contest_consumer.py  test_submission_consumer.py
backend/django_app/apps/realtime/consumers/: contest.py  submission.py
backend/django_app/apps/realtime/events/: __init__.py  contest_events.py  submission_events.py  test_events.py
backend/django_app/apps/submissions/: apps.py  models.py  serializers.py  signals.py  tasks.py  test_consume_judge_results.py  test_signals.py  test_submissions_api.py  test_tasks.py  urls.py  views.py
backend/django_app/apps/submissions/management/commands/: consume_judge_results.py
backend/django_app/apps/submissions/migrations/: 0001_initial.py  0002_rename_memory_used_submission_memory_used_mb.py  0003_submission_submissions_user_id_6a1f53_idx.py  0004_submission_error_message_submission_stderr.py
backend/django_app/apps/users/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  test_activity.py  test_avatar_cleanup.py  test_avatar_upload.py  test_elo.py  test_elo_history.py  test_profile_fields.py  test_rank.py  test_streak.py  test_user_stats.py  tests.py  urls.py  views.py
backend/django_app/apps/users/migrations/: 0001_initial.py  0002_alter_user_elo_rating_elohistory.py  0002_useravatar.py  0003_elohistory_users_elohi_user_id_7b585f_idx.py  0003_slim_elohistory_for_sparkline.py  0003_user_max_rating.py  0004_merge_20260625_1128.py  0004_refactor_elohistory_slim.py
backend/django_app/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/django_app/config/settings/: celery.py  storages.py
backend/django_app/settings/: base.py  celery_settings.py  dev.py  prod.py  storages.py  test.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  router.jsx
frontend/src/api/: auth.js  auth.test.js  client.js  client.test.js  contests.js  problems.js  submissions.js  users.js
infra/nginx/: nginx.dev.conf  nginx.prod.conf
judge/: Dockerfile  entrypoint.sh  pyproject.toml
judge/app/: app_factory.py  config.py  main.py  redis_client.py  worker.py
judge/app/api/: routes.py
judge/app/core/: cache.py  runner.py  sandbox.py  verdict.py
judge/app/tests/: conftest.py  test_app_factory.py  test_health.py  test_runner.py  test_sandbox.py  test_verdict.py  test_worker.py
main_project/: settings.py
shared/schemas/: __init__.py  request.py  response.py
shared/tests/: test_schemas.py
(+43 files in other folders)
