[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.7",
    "celery[redis]>=5.5.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.0",
    "django>=6.0.5",
    "django-environ>=0.13.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest-asyncio>=1.3.0",
    "redis>=6.4.0",
    "sorl-thumbnail>=13.0.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.dev"
pythonpath = ["django_app", "../shared"]
asyncio_mode = "auto"
python_files = ["test*.py", "*_test.py"]
python_classes = ["Test*", "*Tests", "*TestCase"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "django_app/config/asgi.py",
    "django_app/config/wsgi.py",
    "django_app/manage.py",
    "django_app/**/migrations/*.py",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]
"**/settings/*.py" = ["E501", "F403", "F405"]
